# microsoft-smtp-xoauth2-test-tool

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: auth_code_grant.rs  cloud.rs  curl.rs  device_code_flow.rs  error.rs  get_profile.rs  http_client.rs  main.rs  token_keeper.rs
src/login/: login_workflow.rs  mod.rs
