[package]
name = "microsoft-smtp-xoauth2-test-tool"
version = "0.5.0"
edition = "2021"
author = "Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
curl-http-client = "2.9"
derive-deref-rs = "0.1"
directories = "6.0"
env_logger = "0.11"
http = "1.4"
log = "0.4"
mail-send = "0.6"
oauth2 = { version = "5.0", default-features = false }
serde = "1.0"
serde_json = "1.0"
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt"] }
